# heic2jpeg

./: .gitmodules  CMakeLists.txt  README.md  heif2jpeg.cpp
